# RRLB_MPC_C

./: CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  run_examples.py
ALADIN/: CMakeLists.txt  RRLB_MPC.c  RRLB_MPC.h  main.c
ALADIN/helicopter/: mpQP_data.h
ALADIN/quadcopter/: mpQP_data.h
ALADIN/robotArm/: mpQP_data.h
ALADIN/spacecraft/: mpQP_data.h
ALADIN/springMass/: mpQP_data.h
ALADIN/toyExample/: MPC_problem.h  mpQP_data.h
hpipm/: CMakeLists.txt  main.c
hpipm/helicopter/: MPC_problem.h
hpipm/springMass/: MPC_problem.h
osqp/: CMakeLists.txt  main.c
osqp/helicopter/: workspace.c  workspace.h
osqp/quadcopter/: workspace.c  workspace.h
osqp/robotArm/: MPC_problem.h  workspace.c  workspace.h
osqp/spacecraft/: MPC_problem.h  workspace.c  workspace.h
osqp/springMass/: workspace.c  workspace.h
osqp/toyExample/: workspace.c  workspace.h
qpOASES/: CMakeLists.txt  main.cpp
third_party_licenses/: HPIPM_LICENSE.txt  OSQP_LICENSE.txt  README.md
